Fixed Overflowing text

--- a/components/GiveawayCard/index.css
+++ b/components/GiveawayCard/index.css
@@ -27,7 +27,7 @@
   height: 45px;
   font-size: 17px;
   padding: 10px 14px;
-  line-height: 1.3;
+  line-height: 1.5;
   text-align: center;
   letter-spacing: 1px;
   -webkit-line-clamp: 2;
